# PothosComms

./: CMakeLists.txt  Changelog.txt  README.md
common/: Testing.hpp  XSIMDTypes.hpp
debian/: changelog  control  copyright
demod/: CMakeLists.txt  FreqDemod.cpp
digital/: BitsToSymbols.cpp  Bitwise.cpp  ByteOrder.cpp  ByteOrder.hpp  BytesToSymbols.cpp  CMakeLists.txt  Descrambler.cpp  FrameInsert.cpp  FrameSync.cpp  PreambleCorrelator.cpp  PreambleFramer.cpp  Scrambler.cpp  SymbolMapper.cpp  SymbolSlicer.cpp  SymbolsToBits.cpp  SymbolsToBytes.cpp  TestBitwise.cpp  TestByteOrder.cpp  TestDifferentialCoding.cpp  TestFramerToCorrelator.cpp  TestPreambleCorrelator.cpp  TestPreambleFramer.cpp  TestSymbolBitConversions.cpp  TestSymbolByteConversions.cpp  TestSymbolMapperSlicer.cpp
fft/: CMakeLists.txt  FFT.cpp  FFTAux.h  TestFFT.cpp  _kiss_fft_guts.h  kissfft.hh
filter/: CMakeLists.txt  DCRemoval.cpp  EnvelopeDetector.cpp  FIRDesigner.cpp  FIRFilter.cpp  IIRDesigner.cpp  IIRFilter.cpp  TestFIRDesigner.cpp  TestFIRFilter.cpp  TestIIRFilter.cpp
functions/: CMakeLists.txt  FxptHelpers.hpp  fxpt_atan2.cpp
mac/: CMakeLists.txt  SimpleLlc.cpp  SimpleMac.cpp  TestSimpleLlc.cpp  TestSimpleMac.cpp
math/: Abs.cpp  Angle.cpp  Arithmetic.cpp  Beta.cpp  CMakeLists.txt  Comparator.cpp  Conjugate.cpp  ConstArithmetic.cpp  ConstComparator.cpp  ErrorFunction.cpp  Exp.cpp  Exp10.hpp  Exp10.hpp.in  Gamma.cpp  Log.cpp  Log10.cpp  ModF.cpp  Pow.cpp  RSqrt.cpp  RSqrt.hpp  Root.cpp  Rotate.cpp  Scale.cpp  Sigmoid.cpp  Sinc.cpp  TestAbs.cpp  TestAngle.cpp  TestArithmeticBlocks.cpp  TestBeta.cpp  TestComparatorBlocks.cpp  TestConjugate.cpp  TestErrorFunction.cpp  TestExp.cpp  TestGamma.cpp  TestLog.cpp  TestLog10.cpp  TestModF.cpp  TestPowRoot.cpp  TestRSqrt.cpp  TestRotate.cpp  (+10 more)
math/SIMD/: Abs.cpp  Arithmetic.cpp  Beta.cpp  CMakeLists.txt  Comparator.cpp  Conjugate.cpp  ConstArithmetic.cpp  ConstComparator.cpp  ErrorFunction.cpp  Exp.cpp  Gamma.cpp  Log.cpp  MathBlocks.json  ModF.cpp  Pow.cpp  RSqrt.cpp  Root.cpp  Sigmoid.cpp  Sinc.cpp  Trigonometric.cpp
utility/: CMakeLists.txt  CombineComplex.cpp  EnergyDetector.cpp  MinMaxHelpers.hpp  SignalProbe.cpp  SplitComplex.cpp  TestComplex.cpp  Threshold.cpp  WaveTrigger.cpp
waveform/: NoiseSource.cpp  WaveformSource.cpp
window/: CMakeLists.txt  WindowDesigner.cpp
